--- a/app/style/css/style.css
+++ b/app/style/css/style.css
@@ -213,7 +213,7 @@ hr {
   color: #000;
   background: #ffc;
   display: inline-block;
-  height: 10em;
+  height: 12em;
   width: 10em;
   padding: 1em;
   /* Firefox */
@@ -222,12 +222,12 @@ hr {
   -webkit-box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
   /* Opera */
   box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
-  /* -webkit-transform: rotate(-3deg);
+  -webkit-transform: rotate(-3deg);
   -o-transform: rotate(-3deg);
   -moz-transform: rotate(-3deg);
   transform: rotate(-3deg);
-} */
 }
+
 .note .note-li {
   margin: 1em;
   float: left;
@@ -235,13 +235,13 @@ hr {
 
 .note .note-li .note-title {
   font-weight: bold;
-  font-family: "Reenie Beanie", arial, sans-serif;
+  font-family: "Indie Flower", cursive;
   padding-bottom: 5px;
   font-size: 20px;
 }
 
 .note .note-li .note-body {
-  font-family: "Reenie Beanie", arial, sans-serif;
+  font-family: "Indie Flower", cursive;
   font-size: 180%;
   font-size: 20px;
 }
